--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,29 @@
-.architect
-bootstrap.json
+bower_components
+node_modules
+bower
+test/temp
+test
+.sass-cache
+.tmp
+test/bower_components/
+__ConfigTemp
+dist
+.DS_Store
+.DS_STORE
+*~
+*.pyc
+static
+.grunt
+_SpecRunner.html
+__benchmarks__
 build/
-ext/
+.module-cache
+*.gem
+*.log*
+chrome-user-data
+*.sublime-project
+*.sublime-workspace
+.idea
+*.iml
+._~$Layout_wechat.pptx
+~$Layout_wechat.pptx
