--- a/App/package.json
+++ b/App/package.json
@@ -14,8 +14,21 @@
     "vue-router": "^0.7.10"
   },
   "devDependencies": {
-    "connect-livereload": "^0.5.4",
+    "babel-core": "^6.4.5",
+    "babel-plugin-transform-runtime": "^6.4.3",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-runtime": "^5.8.35",
+    "browserify": "^13.0.0",
     "gulp": "^3.9.0",
-    "gulp-express": "^0.3.5"
+    "gulp-imagemin": "^2.4.0",
+    "gulp-live-server": "0.0.29",
+    "gulp-minify-css": "^1.2.3",
+    "gulp-uglify": "^1.5.1",
+    "imagemin-pngquant": "^4.2.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
+    "vue-hot-reload-api": "^1.3.2",
+    "vueify": "^8.3.4",
+    "vueify-insert-css": "^1.0.0"
   }
 }
