--- a/App/package.json
+++ b/App/package.json
@@ -10,25 +10,26 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
+    "superagent": "^1.8.3",
     "vue": "^1.0.15",
     "vue-router": "^0.7.10"
   },
   "devDependencies": {
-    "babel-core": "^6.4.5",
-    "babel-plugin-transform-runtime": "^6.4.3",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-runtime": "^5.8.35",
-    "browserify": "^13.0.0",
-    "gulp": "^3.9.0",
-    "gulp-imagemin": "^2.4.0",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
+    "gulp": "^3.9.1",
     "gulp-live-server": "0.0.29",
-    "gulp-minify-css": "^1.2.3",
-    "gulp-uglify": "^1.5.1",
-    "imagemin-pngquant": "^4.2.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
+    "path": "^0.12.7",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^1.3.2",
-    "vueify": "^8.3.4",
-    "vueify-insert-css": "^1.0.0"
+    "vue-html-loader": "^1.2.2",
+    "vue-loader": "^8.5.2",
+    "vue-style-loader": "^1.0.0",
+    "webpack-stream": "^3.2.0"
   }
 }
